--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,8 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: git Clone https://github.com/AkshayaJeyan/UiPath-Test.git
+        run: git Install
+             git Clone https://github.com/AkshayaJeyan/UiPath-Test.git
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
