--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           path: main
+         
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: dir
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
