--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,20 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: dir
-
+        
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: git --version
+      - name: Run the batch scipt
+            
+      - uses: microsoft/setup-msbuild@v1.0.2
+
+      - name: Restore NuGet packages
+        working-directory: ${{env.GITHUB_WORKSPACE}}
+        run: nuget restore ${{env.SOLUTION_FILE_PATH}}
+
+      - name: Build Solution
+        working-directory: ${{env.GITHUB_WORKSPACE}}
+        run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+
             
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
