--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,19 +30,7 @@ jobs:
         run: dir
         
       # Runs a single command using the runners shell
-      - name: Run the batch scipt
-            
-      - uses: microsoft/setup-msbuild@v1.0.2
+      - name: Run the trigger script
+        run: C:\Users\rpa_uat\Desktop\Test Trigger.bat
+        
 
-      - name: Restore NuGet packages
-        run: nuget restore ${{env.SOLUTION_FILE_PATH}}
-
-      - name: Build Solution
-        run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
-
-            
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
