--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
         
       # Runs a single command using the runners shell
       - name: Run the trigger script
-        run: ./C:\Users\rpa_uat\Desktop\Test_Trigger.bat
+        run: ./C:\Users\rpa_uat\Desktop\TestTrigger.bat
         
 
