--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,6 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run the trigger script
         working-directory: C:/Users/rpa_uat/Desktop/
-        run: ./TestTrigger.bat
+        run: TestTrigger.bat
         
 
