--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         
       # Runs a single command using the runners shell
       - name: Run the trigger script
-        working-directory: C:\Users\rpa_uat\Desktop\
+        working-directory: C:\Windows\System32\WindowsPowerShell\v1.0\powershell.EXE
         run: .\\TestTrigger.bat
         
 
