--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,11 @@ jobs:
         run: dir
         
       # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: whoami
+        
+        
+      # Runs a single command using the runners shell
       - name: Run the trigger script
         run: cd C:\Users\rpa_uat\Desktop\
         
