--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,9 @@ jobs:
         
       # Runs a single command using the runners shell
       - name: Run the trigger script
-        run: cd C:\Users
+        run: |
+          cd C:\Users
+          dir
         
       # Runs a single command using the runners shell
       - name: Run a one-line script
