--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,21 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3       
+      - uses: actions/checkout@v3
+      
+premake:
+runs-on: windows-latest
+needs: checkout
+
+
+steps:
+- working-directory: ${{env.GITHUB_WORKSPACE}}
+  run: ./TestTrigger.bat
+      
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: dir      
+  
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
