--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,40 +28,40 @@ jobs:
 premake:
 runs-on: self-hosted
 needs: checkout
-  steps:
-    - working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: ./TestTrigger.bat
+  
+steps:
+- working-directory: ${{env.GITHUB_WORKSPACE}}
+  run: .\TestTrigger.bat
       
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: dir      
+      #- name: Run a one-line script
+        #run: dir      
   
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: dir
+      #- name: Run a one-line script
+        #run: dir
         
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: cd C:\actions-runner\_work\UiPath-Test\UiPath-Test\
+#       - name: Run a one-line script
+#         run: cd C:\actions-runner\_work\UiPath-Test\UiPath-Test\
+        
+#       # Runs a single command using the runners shell
+#       - name: Run a one-line script
+#         run: C:\Users\TestTrigger.bat
+        
+#       # Runs a single command using the runners shell
+#       - name: Run the trigger script
+#         run: |
+#           cd C:\Users\rpa_uat
+#           dir
         
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: C:\Users\TestTrigger.bat
+      #- name: Run a one-line script
+        #run: dir
         
       # Runs a single command using the runners shell
-      - name: Run the trigger script
-        run: |
-          cd C:\Users\rpa_uat
-          dir
-        
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: dir
-        
-      # Runs a single command using the runners shell
-      - name: Run the trigger script
-        working-directory: C:\Windows\System32\WindowsPowerShell\v1.0\powershell.EXE
-        run: .\\TestTrigger.bat
+      #- name: Run the trigger script
+        #working-directory: C:\Windows\System32\WindowsPowerShell\v1.0\powershell.EXErun: .\\TestTrigger.bat
         
 
