--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
   
       - working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: .\TestTrigger.bat
+        run: ./TestTrigger.bat
       
      # Runs a single command using the runners shell
       - name: Run a one-line script
