--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
   
       - working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: "C:\Users\rpa_uat\AppData\Local\Programs\UiPath\Studio\UiRobot.exe" -file "C:\actions-runner\_work\UiPath-Test\UiPath-Test\Main.xaml"
+        run: C:\Users\rpa_uat\AppData\Local\Programs\UiPath\Studio\UiRobot.exe -file "C:\actions-runner\_work\UiPath-Test\UiPath-Test\Main.xaml"
       
      # Runs a single command using the runners shell
       - name: Run a one-line script
