--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,12 +24,15 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      
+     # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: |
+            cd Desktop
+            start Newtext.txt      
   
       - working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: |
-             cd Desktop
-             start Newtext.txt
-      
+        
      # Runs a single command using the runners shell
       - name: Run a one-line script
         run: dir      
