--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,7 @@ jobs:
       
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: |
-            cd Desktop
-            start Newtext.txt      
+        run: start Newtext.txt      
         
      # Runs a single command using the runners shell
       - name: Run a one-line script
