--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,11 @@ jobs:
       
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: ./TestTrigger.bat
+        run: whoami
         
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: dir      
+        run: ./TestTrigger.bat     
         
       # Runs a single command using the runners shell
       - name: Run the trigger script
