--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,12 +30,16 @@ jobs:
         run: whoami
 
      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: cd C:\actions-runner\_work\UiPath-Test\UiPath-Test
-     
+     # - name: Run a one-line script
+      #  run: cd C:\actions-runner\_work\UiPath-Test\UiPath-Test
+
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: TestTrigger.bat 
+        run: cd C:\Users\rpa_uat\Desktop
+
+     # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: ./test.bat
         
      # Runs a single command using the runners shell
       #- name: Run a one-line script
