--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
 
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: cd C:\Users\rpa_uat\Desktop
+        run: pwd
 
      # Runs a single command using the runners shell
       - name: Run a one-line script
