--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,8 +42,8 @@ jobs:
         #run: sh test.sh
         
      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: ./TestTrigger.bat     
+      #- name: Run a one-line script
+       # run: ./TestTrigger.bat     
         
       # Runs a single command using the runners shell
       #- name: Run the trigger script
