--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,8 @@ jobs:
         run: start C:\actions-runner\_work\UiPath-Test\UiPath-Test\TestTrigger.bat
 
      # Runs a single command using the runners shell
-      #- name: Run a one-line script
-        #run: sh test.sh
+      - name: Run a one-line script
+        run: Get-ExecutionPolicy
         
      # Runs a single command using the runners shell
       #- name: Run a one-line script
