--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,10 @@ jobs:
 
      # Runs a single command using the runners shell
       - name: Run a one-line script
+        run: Get-ExecutionPolicy
+        
+     # Runs a single command using the runners shell
+      - name: Run a one-line script
         run: start C:\actions-runner\_work\UiPath-Test\UiPath-Test\TestTrigger.bat
 
      # Runs a single command using the runners shell
