--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
       #  run: cd C:\actions-runner\_work\UiPath-Test\UiPath-Test
       
      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: Set-ExecutionPolicy -ExecutionPolicy AllSigned -Scope CurrentUser
+      #- name: Run a one-line script
+        #run: Set-ExecutionPolicy -ExecutionPolicy AllSigned -Scope CurrentUser
 
      # Runs a single command using the runners shell
       - name: Run a one-line script
