--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
       - uses: actions/checkout@v3
       
      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: whoami
+      #- name: Run a one-line script
+        #run: whoami
 
      # Runs a single command using the runners shell
      # - name: Run a one-line script
