--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass
+        run: whoami
 
      # Runs a single command using the runners shell
      # - name: Run a one-line script
