--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,9 @@ jobs:
       
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: cd C:\actions-runner\_work\UiPath-Test\UiPath-Test
+        run: cd C:\actions-runner\_work\UiPath-Test\UiPath-Test\UiPath-Test
         
-      - uses: actions/checkout@v3
+      #- uses: actions/checkout@v3
       
      # Runs a single command using the runners shell
       - name: Run a one-line script
