--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: .\C:\actions-runner\_work\UiPath-Test\UiPath-Test\UiPath-Test\TestTrigger.bat
+        run: .\C:\Users\rpa_uat\rpa\UiPath-Test\TestTrigger.bat
         
       #- uses: actions/checkout@v3
       
