--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,18 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      
+
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: .\C:\Users\rpa_uat\rpa\UiPath-Test\TestTrigger.bat
+        run: whoami
+
+     # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: pwd
+
+     # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: .\C:\Users\rpa_uat\rpa\UiPath-Test\sample.bat
         
       #- uses: actions/checkout@v3
       
