--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
 
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: .\C:\Users\rpa_uat\rpa\UiPath-Test\sample.bat
+        run: .\sample.bat
         
       #- uses: actions/checkout@v3
       
