--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,11 @@ jobs:
 
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: .\sample.bat
+        run: cd UiPath-Test
+
+     # Runs a single command using the runners shell
+      #- name: Run a one-line script
+       # run: .\TestTrigger.bat
         
       #- uses: actions/checkout@v3
       
