--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,8 +43,8 @@ jobs:
       #- uses: actions/checkout@v3
       
      # Runs a single command using the runners shell
-      #- name: Run a one-line script
-        #run: .\TestTrigger.bat
+      - name: Run a one-line script
+        run: .\TestTrigger.bat
       
      # Runs a single command using the runners shell
       #- name: Run a one-line script
