--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,8 @@ jobs:
         run: pwd
 
      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: cd UiPath-Test
+      #- name: Run a one-line script
+       # run: cd UiPath-Test
 
      # Runs a single command using the runners shell
       #- name: Run a one-line script
