--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
 
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: .\TestTrigger.bat
+        run: .\sample.bat
         
       #- uses: actions/checkout@v3
       
