--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,9 @@ jobs:
 
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: whoami
+        run: |
+          whoami
+          git --version
 
      # Runs a single command using the runners shell
       - name: Run a one-line script
