--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Run a one-line script
         run: |
           whoami
+          rm -rf UiPath-Test
           git clone https://github.com/AkshayaJeyan/UiPath-Test.git
 
      # Runs a single command using the runners shell
