--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,12 +28,14 @@ jobs:
       - name: Run a one-line script
         run: |
           whoami
-          rm -rf UiPath-Test
+          pwd
+          dir
           git clone https://github.com/AkshayaJeyan/UiPath-Test.git
+          cd UiPath-Test
 
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: pwd
+        run: .\TestTrigger.bat
 
      # Runs a single command using the runners shell
       #- name: Run a one-line script
