--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
 
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: .\TestTrigger.bat
+        run: .\sample.bat
 
      # Runs a single command using the runners shell
       #- name: Run a one-line script
