--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,15 +29,15 @@ jobs:
       - name: Run a one-line script
         run: |
           pwd
-          .\sample.bat
+          .\TestTrigger.bat
 
      # Runs a single command using the runners shell
       #- name: Run a one-line script
        # run: cd UiPath-Test
 
      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: .\sample.bat
+      #- name: Run a one-line script
+        #run: .\sample.bat
         
       #- uses: actions/checkout@v3
       
