--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,24 +26,24 @@ jobs:
       - uses: actions/checkout@v3
         
      # Runs a single command using the runners shell
+      #- name: Run a one-line script
+        #run: |
+         # pwd
+         #.\TestTrigger.bat
+
+     # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: |
-          pwd
-          .\TestTrigger.bat
+        run: whoami
 
      # Runs a single command using the runners shell
-      #- name: Run a one-line script
-       # run: cd UiPath-Test
-
-     # Runs a single command using the runners shell
-      #- name: Run a one-line script
-        #run: .\sample.bat
+      - name: Run a one-line script
+        run: pwd
         
       #- uses: actions/checkout@v3
       
      # Runs a single command using the runners shell
-      #- name: Run a one-line script
-       # run: .\sample.bat
+      - name: Run a one-line script
+        run: bash test.sh
       
      # Runs a single command using the runners shell
       #- name: Run a one-line script
