--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
       
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: .\sample.bat
+        run: ./TestTrigger.bat
       
      # Runs a single command using the runners shell
       #- name: Run a one-line script
