--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,10 @@ jobs:
       - name: Run a one-line script
         run: pwd
         
+     # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: cd C:\UiPath\Studio\UiRobot.exe        
+        
       #- uses: actions/checkout@v3
       
      # Runs a single command using the runners shell
