--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,19 +39,25 @@ jobs:
       - name: Run a one-line script
         run: pwd
         
-     # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: cd C:/Users/rpa_uat/AppData/Local/Programs/UiPath/Studio 
+#      # Runs a single command using the runners shell
+#       - name: Run a one-line script
+#         run: cd C:/Users/rpa_uat/AppData/Local/Programs/UiPath/Studio 
         
      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: pwd        
+        run: pwd  
+        
+     # Runs a single command using the runners shell
+      - name: Run a one-line script
+        shell: pwsh
+        run: |
+          .\sample.bat
         
       #- uses: actions/checkout@v3
       
      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: .\TestTrigger.bat
+#       - name: Run a one-line script
+#         run: .\TestTrigger.bat
       
      # Runs a single command using the runners shell
       #- name: Run a one-line script
