--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,8 +50,7 @@ jobs:
      # Runs a single command using the runners shell
       - name: Run a one-line script
         shell: pwsh
-        run: |
-          .\TestTrigger.bat
+        run: .\TestTrigger.bat
         
       #- uses: actions/checkout@v3
       
